# react-native-rapier

./: .gitignore  CONTRIBUTING.md  README.md  callstack-react-native-rapier.podspec  package.json  react-native-rapier.podspec  tsconfig.json
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/callstack/reactnativerapier/: ReactNativeRapierModule.kt  ReactNativeRapierPackage.kt
android/src/newarch/: ReactNativeRapierSpec.kt
android/src/oldarch/: ReactNativeRapierSpec.kt
cpp/: bridge.cpp  callstack-react-native-rapier.cpp  callstack-react-native-rapier.h  jsi-exports-bridge.cpp  jsi-exports-bridge.h  jsi-imports-bridge.cpp  jsi-imports-bridge.h  macros.h  react-native-rapier.cpp  react-native-rapier.h
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: File.swift  Podfile
example/src/: App.tsx
ios/: ReactNativeRapier.h  ReactNativeRapier.mm
patches/: @dimforge+rapier3d-compat+0.11.2.patch
src/: NativeReactNativeRapier.ts  index.tsx
